--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,19 @@
 <p>
   <ul>
     <% @cars.cars.each do |car| %>
-     <li> <%= car.join(" :: ") %> </li>
+     <!-- <li> <%= car.join(" :: ") %> </li> -->
+     <% vehicle, year, price = car.first.split, car[1], car.last %>
+     <% manufacturer, *make = vehicle %>
+     <li> <%= manufacturer %>
+       <ul>
+         <li><%= make.join(" ") %></li>
+         <li><%= year %></li>
+         <li><%= price %></li>
+       </ul>
+     </li>
     <% end %>
   </ul>
 </p>
+
+
+<%#= @cars.cars.each{|x| ca, year = x.first.split, x[1]; man, *make = ca; puts "#{man}\n\t#{make.join(" ")}\n\t#{year}"} %>
