--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,17 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<h1>About</h1>
+
+<p>
+  Love cars, so when I was a report out on the safest cars for teens, I was nuturally inclined to check it out. It was unfortunately tedious to look at so I set about creating, what I feel is, an easier way to look at the data.
+</p>
+
+<p>
+  The information below is copied verbatim from <%= link_to "Vehicles for teens", "http://www.iihs.org/iihs/ratings/vehicles-for-teens", {target: "_blank"} %> article on the IIHS website.
+</p>
+
+<p>
+  Vehicles on this list earn good ratings in the IIHS moderate overlap front, side, roof strength and head restraint tests. If rated by NHTSA, they earn 4 or 5 stars overall or 4 or 5 stars in the front and side tests under the old rating scheme. All come with standard ESC.
+</p>
+
+<p>
+  Prices, rounded to the nearest $100, were taken from <%= link_to "Kelley Blue Book", "http://www.kbb.com/", {target: "_blank"} %> on July 1, 2014, for the lowest trim level and earliest applicable model year based on the following criteria: vehicle in good condition, typical mileage and private party purchase in Arlington, VA.
+</p>
