--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,7 @@
   <div class="car"> 
     <%= car.name %><br />
     <%= car.year %><br />
-    Base Price: <%= car.suggested_price %><br />
+    Base Price: $<%= number_with_delimiter(car.suggested_price, :delimiter => ',') %><br />
     <%= car.extra_information.nil? ? "" : "*#{car.extra_information}" %>
   </div>
-<% end%>
+<% end %>
