--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,12 +1,23 @@
-<h1>Cars For Teens</h1>
+<div id="page-content">
+  
+  <h1>The 2014 IIHS Cars for Teens</h1>
 
-<p>All information based on data that was accurate on July 1st 2014</p>
+  <p>All information based on data that was accurate on July 1st 2014</p>
 
-<% @garage.cars.sort_by{|car| [car.name, car.suggested_price]}.each do |car| %>
-  <div class="car"> 
-    <%= car.name %><br />
-    <%= car.model_years %><br />
-    Base Price: $<%= number_with_delimiter(car.suggested_price, :delimiter => ',') %><br />
-    <%= car.extra_information.nil? ? "" : "*#{car.extra_information}" %>
-  </div>
-<% end %>
+  <ul class="tabs" data-tab>
+    <li class="tab-title active"><a href="#">All Cars</a></li>
+    <li class="tab-title"><a href="#">Under $10,000 Base</a></li>
+    <li class="tab-title"><a href="#">Over $10,000 Base</a></li>
+  </ul>
+
+  <ul class="small-block-grid-2 medium-block-grid-3 large-block-grid-4">
+    <% @garage.cars.sort_by{|car| [car.name, car.suggested_price]}.each do |car| %>
+      <%= content_tag(:li, :class => "car", :id => car_id(car.suggested_price)) do %> 
+        <%= car.name %><br />
+        <%= car.model_years %><br />
+        Base Price: $<%= number_with_delimiter(car.suggested_price, :delimiter => ',') %><br />
+        <%= car.extra_information.nil? ? "" : "*#{car.extra_information}" %>
+      <% end %>
+    <% end %>
+  </ul>
+</div>
