Non-dry implementation of tab navigation via foundation
Gave up on hacking foundation to do exactly what I wanted…it was time
to wave the white flag and move on to other things

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -15,9 +15,9 @@
   margin: 1;
 }
 
-//.car {
-//  float: left;
-//  padding: 10px 30px;
-//  width: 170px;
-//  height: 80px;
-//}
+.car {
+  float: left;
+  padding: 10px 30px;
+  width: 170px;
+  height: 80px;
+}
