--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,19 +5,41 @@
   <p>All information based on data that was accurate on July 1st 2014</p>
 
   <ul class="tabs" data-tab>
-    <li class="tab-title active"><a href="#">All Cars</a></li>
-    <li class="tab-title"><a href="#">Under $10,000 Base</a></li>
-    <li class="tab-title"><a href="#">Over $10,000 Base</a></li>
+    <li class="tab-title active"><a href="#all">All Cars</a></li>
+    <li class="tab-title"><a href="#good">Under $10,000 Base</a></li>
+    <li class="tab-title"><a href="#better">Over $10,000 Base</a></li>
   </ul>
-
-  <ul class="small-block-grid-2 medium-block-grid-3 large-block-grid-4">
-    <% @garage.cars.sort_by{|car| [car.name, car.suggested_price]}.each do |car| %>
-      <%= content_tag(:li, :class => "car", :id => car_id(car.suggested_price)) do %> 
-        <%= car.name %><br />
-        <%= car.model_years %><br />
-        Base Price: $<%= number_with_delimiter(car.suggested_price, :delimiter => ',') %><br />
-        <%= car.extra_information.nil? ? "" : "*#{car.extra_information}" %>
+  
+  <div class="tabs-content">
+    <div class="content active" id="all">
+      <p>
+        These are all the cars models that made the list, each one brings a great balance between safety and value for money.
+      </p>
+      
+      <% @cars.each do |car| %>
+        <%= render partial: 'car_details', locals: {car: car} %>
       <% end %>
-    <% end %>
-  </ul>
+    </div>
+    
+    <div class="content active" id="good">
+      <p>
+        These are competively price and offer good value for money.
+      </p>
+      
+      <% @cars.reject{|car| car if car.suggested_price > 10000}.each do |car| %>
+        <%= render partial: 'car_details', locals: {car: car} %>
+      <% end %>
+    </div>
+    
+    <div class="content active" id="better">
+      <p>
+        Though more expensive, these have more to offer in terms of features and residual value.
+      </p>
+      
+      <% @cars.reject{|car| car if car.suggested_price <= 10000}.each do |car| %>
+        <%= render partial: 'car_details', locals: {car: car} %>
+      <% end %>
+    </div>
+  </div>
+  
 </div>
