Display was a bit off, fixing it

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -21,7 +21,7 @@
       <% end %>
     </div>
     
-    <div class="content active" id="good">
+    <div class="content" id="good">
       <p>
         These are competively price and offer good value for money.
       </p>
@@ -31,7 +31,7 @@
       <% end %>
     </div>
     
-    <div class="content active" id="better">
+    <div class="content" id="better">
       <p>
         Though more expensive, these have more to offer in terms of features and residual value.
       </p>
