--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -8,6 +8,11 @@
 
 .tabs .tab-title {
   width: 33%;
+  
+  a {
+    text-align: center;
+    font-size: 1.5rem;
+  }
 }
 
 .tabs {
@@ -18,6 +23,10 @@
 .car {
   float: left;
   padding: 10px 30px;
-  width: 249px;
+  width: 240px;
   height: 100px;
+}
+
+.button {
+  margin: 0.05rem;
 }
