--- a/app/views/pages/_car_details.html.erb
+++ b/app/views/pages/_car_details.html.erb
@@ -1,6 +1,6 @@
-<%= content_tag(:div, :class => "car", "data-value" => car_id(car.suggested_price)) do %> 
+<div class="car button secondary">
   <%= car.name %><br />
   <%= car.model_years %><br />
   Base Price: $<%= number_with_delimiter(car.suggested_price, :delimiter => ',') %><br />
-  <%= car.extra_information.nil? ? "" : "*#{car.extra_information}" %>
-<% end %>
+  <%#= car.extra_information.nil? ? "" : "*#{car.extra_information}" %>
+</div>
