creating a named manufacturer route

--- a/app/views/layouts/_top_navigation.html.erb
+++ b/app/views/layouts/_top_navigation.html.erb
@@ -15,7 +15,7 @@
     </ul>
     
     <ul class="left">
-      <li><%= link_to "Manufacturers", "#" %>
+      <li><%= link_to "Manufacturers", manufacturers_path %></li>
     </ul>
   </section>
 </nav>
