--- a/app/views/car/model.html.erb
+++ b/app/views/car/model.html.erb
@@ -1,5 +1,11 @@
 <%= content_tag :h1, @title %>
 
+<nav class="breadcrumbs">
+  <%= link_to "Manufacturers", manufacturers_path %>
+  <%= link_to params[:manufacturer], manufacturer_path(params[:manufacturer]) %>
+  <%= link_to params[:model], model_path(params[:manufacturer], params[:model]), class: "current" %>
+</nav>
+
 <% @years.sort.each do |year| %>
   <div class="car">
     <%= link_to year, car_path(params[:manufacturer], params[:model], year) %>
