--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,8 @@
   </head>
   <body>
     <%= render 'layouts/top_navigation' %>
-    <%= yield %>
+    <div id="page-content">
+      <%= yield %>
+    </divs>
   </body>
 </html>
