placing everything in a page-content div

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,9 +31,9 @@
   </head>
   <body>
     <%= render 'layouts/top_navigation' %>
-
-    <%= yield %>
-
+    <div id="page-content">
+      <%= yield %>
+    </divs>
   </body>
 
 </html>
