--- a/app/views/manufacturer/show.html.erb
+++ b/app/views/manufacturer/show.html.erb
@@ -1,12 +1,16 @@
-<%= content_tag :h1, @title %>
+<%= content_tag(:span, "", :class => "manufacturer_logo", :id => params[:manufacturer].downcase) %>
 
-<nav class="breadcrumbs">
-  <%= link_to "Manufacturers", manufacturers_path %>
-  <%= link_to params[:manufacturer], manufacturer_path(params[:manufacturer]), class: "current" %>
-</nav>
+<div id="cars">
+  <%= content_tag :h1, @title %>
 
-<% @cars.uniq(&:name).sort{|cara, carb| cara.model <=> carb.model}.each do |car| %>
-  <div class="car">
-    <%= link_to car.model, model_path(car.manufacturer, car.model) %>
-  </div>
-<% end %>
+  <nav class="breadcrumbs">
+    <%= link_to "Manufacturers", manufacturers_path %>
+    <%= link_to params[:manufacturer], manufacturer_path(params[:manufacturer]), class: "current" %>
+  </nav>
+
+  <% @cars.uniq(&:name).sort{|cara, carb| cara.model <=> carb.model}.each do |car| %>
+    <div class="car">
+      <%= link_to car.model, model_path(car.manufacturer, car.model) %>
+    </div>
+  <% end %>
+</div>
