--- a/app/views/car/year.html.erb
+++ b/app/views/car/year.html.erb
@@ -1,8 +1,12 @@
-<%= content_tag :h1, @title %>
+<%= content_tag(:span, "", :class => "manufacturer_logo", :id => params[:manufacturer].downcase) %>
 
-<nav class="breadcrumbs">
-  <%= link_to "Manufacturers", manufacturers_path %>
-  <%= link_to params[:manufacturer], manufacturer_path(params[:manufacturer]) %>
-  <%= link_to params[:model], model_path(params[:manufacturer], params[:model]) %>
-  <%= link_to params[:year], car_path(params[:manufacturer], params[:model], params[:year]), class: "current" %>
-</nav>
+<div id="cars">
+  <%= content_tag :h1, @title %>
+
+  <nav class="breadcrumbs">
+    <%= link_to "Manufacturers", manufacturers_path %>
+    <%= link_to params[:manufacturer], manufacturer_path(params[:manufacturer]) %>
+    <%= link_to params[:model], model_path(params[:manufacturer], params[:model]) %>
+    <%= link_to params[:year], car_path(params[:manufacturer], params[:model], params[:year]), class: "current" %>
+  </nav>
+</div>
