Fetching data from wikipedia to augment site
- Case sensitive so needed logic to handle that
- Handles pages with redirects successfully
- BMW and Mercedes were at it again…3 series vs C-Class naming screwed
a number of things up

- A bit unpolished and non-dry…to handle later
- Styling needs to be addressed, the simple layout is unhappy

--- a/app/views/manufacturer/show.html.erb
+++ b/app/views/manufacturer/show.html.erb
@@ -1,5 +1,9 @@
 <%= content_tag(:span, "", :class => "manufacturer_logo", :id => params[:manufacturer].downcase) %>
 
+<div id="summary">
+  <%= get_manufacturer_summary %>
+</div>
+
 <div id="cars">
   <%= content_tag :h1, @title %>
 
