Finishing up manufacturer and model summary
Cleaned up routes
Did some initial drying of code
Made modal clicks fetch info via AJAX

--- a/app/views/car/model.html.erb
+++ b/app/views/car/model.html.erb
@@ -1,8 +1,4 @@
-<%= content_tag(:span, "", :class => "manufacturer_logo", :id => params[:manufacturer].downcase) %>
-
-<div id="summary">
-  <%= get_model_summary %>
-</div>
+<%= render 'summary' %>
 
 <div id="cars">
   <%= content_tag :h1, @title %>
