typo on div generating a ton of noise..fixed

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,6 @@
     <%= render 'layouts/top_navigation' %>
     <div id="page-content">
       <%= yield %>
-    </divs>
+    </div>
   </body>
 </html>
