Getting displays to a nicer place

--- a/app/assets/stylesheets/car.css.scss
+++ b/app/assets/stylesheets/car.css.scss
@@ -9,9 +9,5 @@
   width: 200px;
   height: 200px;
   float: left;
-  margin: 0 10px 100px 0;
-}
-
-#cars {
-  margin-left: 200px;
+  margin-bottom: 30px;
 }
