--- a/app/views/car/year.html.erb
+++ b/app/views/car/year.html.erb
@@ -1,12 +1,16 @@
-<%= render 'summary' %>
 
-<div id="cars">
-  <%= content_tag :h1, @title %>
+<div class="row">
+  <div class="large-9 push-3 columns">
+    <%= content_tag :h1, @title %>
 
-  <nav class="breadcrumbs">
-    <%= link_to "Manufacturers", manufacturers_path %>
-    <%= link_to params[:manufacturer], manufacturer_path(params[:manufacturer]) %>
-    <%= link_to params[:model], model_path(params[:manufacturer], params[:model]) %>
-    <%= link_to params[:year], car_path(params[:manufacturer], params[:model], params[:year]), class: "current" %>
-  </nav>
+    <nav class="breadcrumbs">
+      <%= link_to "Manufacturers", manufacturers_path %>
+      <%= link_to params[:manufacturer], manufacturer_path(params[:manufacturer]) %>
+      <%= link_to params[:model], model_path(params[:manufacturer], params[:model]) %>
+      <%= link_to params[:year], car_path(params[:manufacturer], params[:model], params[:year]), class: "current" %>
+    </nav>
+  </div>
+  <div class="large-3 pull-9 columns">
+    <%= render 'summary' %>
+  </div>
 </div>
