--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,42 +1,48 @@
-<h1>The 2014 IIHS Cars for Teens</h1>
+<div class="intro">
+  <h1>The 2014 IIHS Cars for Teens</h1>
 
-<p>All information based on data that was accurate on July 1st 2014</p>
+  <p>All information based on data that was accurate on July 1st 2014</p>
+</div>
 
-<ul class="tabs" data-tab>
-  <li class="tab-title active"><a href="#all">All Cars</a></li>
-  <li class="tab-title"><a href="#good">Under $10,000 Base</a></li>
-  <li class="tab-title"><a href="#better">Over $10,000 Base</a></li>
+<ul class="tabs small-block-grid-3" data-tab>
+  <li class="tab-title active"><a href="#all">All</a></li>
+  <li class="tab-title"><a href="#good">Good</a></li>
+  <li class="tab-title"><a href="#better">Gooder</a></li>
 </ul>
 
-<div class="tabs-content">
-  <div class="content active" id="all">
-    <p>
-      These are all the cars models that made the list, each one brings a great balance between safety and value for money.
-    </p>
-    
+
+
+<div class="content active" id="all">
+  <p>
+    These are all the cars models that made the list, each one brings a great balance between safety and value for money.
+  </p>
+  <ul class="small-block-grid-2 medium-block-grid-3 large-block-grid-4">
     <% @cars.uniq{|car| car.name}.each do |car| %>
       <%= render partial: 'car_models', locals: {car: car} %>
     <% end %>
-  </div>
+  </ul>
+</div>
 
-  <div class="content" id="good">
-    <p>
-      These are competively price and offer good value for money.
-    </p>
-    
+<div class="content" id="good">
+  <p>
+    These are competively price and offer good value for money.
+  </p>
+
+  <ul class="small-block-grid-2 medium-block-grid-3 large-block-grid-4">
     <% @cars.reject{|car| car if car.suggested_price > 10000}.each do |car| %>
       <%= render partial: 'car_details', locals: {car: car} %>
     <% end %>
-  </div>
-  
-  <div class="content" id="better">
-    <p>
-      Though more expensive, these have more to offer in terms of features and residual value.
-    </p>
-    
+  </ul>
+</div>
+
+<div class="content" id="better">
+  <p>
+    Though more expensive, these have more to offer in terms of features and residual value.
+  </p>
+
+  <ul class="small-block-grid-2 medium-block-grid-3 large-block-grid-4">
     <% @cars.reject{|car| car if car.suggested_price <= 10000}.each do |car| %>
       <%= render partial: 'car_details', locals: {car: car} %>
     <% end %>
-  </div>
+  </ul>
 </div>
-  
