--- a/app/views/layouts/_top_navigation.html.erb
+++ b/app/views/layouts/_top_navigation.html.erb
@@ -15,9 +15,10 @@
       <li><%= link_to "About", about_path %></li>
       <li><%= link_to "Help", help_path %></li>
     </ul>
-    
+
     <ul class="left">
       <li><%= link_to "Manufacturers", manufacturers_path %></li>
+      <li><%= link_to "Categories", "#" %></li>
     </ul>
   </section>
 </nav>
