--- a/app/views/pages/_car_details.html.erb
+++ b/app/views/pages/_car_details.html.erb
@@ -1,1 +1,7 @@
-<%= button_to "#{car.name}\n#{car.model_years}", model_path(car.manufacturer, car.model), :class => "car button secondary", :method => :get, params: {models: car.years.join(",")} %>
+<li>
+  <%= link_to(model_path(car.manufacturer, car.model, params: {models: car.years.join(",")}), :class => "button secondary") do %>
+    <%= "#{car.name}" %>
+    <br />
+    <%= "#{car.model_years}" %>
+  <% end %>
+</li>
