--- a/app/views/pages/_car_models.html.erb
+++ b/app/views/pages/_car_models.html.erb
@@ -1,1 +1,3 @@
-<%= button_to car.name, model_path(car.manufacturer, car.model), class: "car button secondary", method: :get %>
+<li>
+  <%= link_to car.name, model_path(car.manufacturer, car.model), class: "button secondary", method: :get %>
+</li>
