attempt at equalizing height

--- a/app/views/pages/_car_details.html.erb
+++ b/app/views/pages/_car_details.html.erb
@@ -1,4 +1,4 @@
-<li>
+<li data-equalizer-watch>
   <%= link_to(model_path(car.manufacturer, car.model, params: {models: car.years.join(",")}), :class => "button secondary") do %>
     <%= "#{car.name}" %>
     <br />
