--- a/app/views/pages/_car_models.html.erb
+++ b/app/views/pages/_car_models.html.erb
@@ -1,3 +1,3 @@
-<li>
+<li data-equalizer-watch>
   <%= link_to car.name, model_path(car.manufacturer, car.model), class: "button secondary", method: :get %>
 </li>
