updating car stylesheet to use asset pipeline

--- a/app/assets/stylesheets/car.css.scss.erb
+++ b/app/assets/stylesheets/car.css.scss.erb
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .manufacturer_logo {
-  background-image: url(logo_spritesheet.png);
+  background-image: url(<%= asset_path('logo_spritesheet.png') %>);
   background-repeat: no-repeat;
   display: block;
   width: 200px;
