minor styling tweaks to get a couple of things properly spaced

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,16 +15,19 @@
  *= require foundation_and_overrides
  */
 
+/*html {
+    height: 100%;
+}*/
+
 body {
+  height: 100%;
   background-color: #000000;
-  /* background: -webkit-linear-gradient(#000000, #707070); /* For Safari 5.1 to 6.0 */
   background: -webkit-linear-gradient(#000000, #ffffff);
-  /* background: -o-linear-gradient(#000000, #707070); /* For Opera 11.1 to 12.0 */
   background: -o-linear-gradient(#000000, #ffffff);
-  /* background: -moz-linear-gradient(#000000, #707070); /* For Firefox 3.6 to 15 */
   background: -moz-linear-gradient(#000000, #ffffff);
-  /* background: linear-gradient(#000000, #707070); /* Standard syntax (must be last) */
   background: linear-gradient(#000000, #ffffff);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 .row {
