--- a/app/views/layouts/_top_navigation.html.erb
+++ b/app/views/layouts/_top_navigation.html.erb
@@ -18,7 +18,7 @@
 
     <ul class="left">
       <li><%= link_to "Manufacturers", manufacturers_path %></li>
-      <li><%= link_to "Categories", "#" %></li>
+      <li><%= link_to "Categories", categories_path %></li>
     </ul>
   </section>
 </nav>
