--- a/app/views/car/_safety_rating.html.erb
+++ b/app/views/car/_safety_rating.html.erb
@@ -3,7 +3,9 @@
   <h4>IIHS Safety Rating</h4>
   
   <% if @safety_rating.cached_ratings.empty? %>
+    <p class="text-justify">
       Currently no safety rating is available for this model from IIHS. However, since it was on the list of safe cars for teens, it recieved better that poor rating in all the IIHS tests and 4-5 star overall rating from the NHTSA.
+    </p>
   <% else %>
     <div id="ratings">
       <% @safety_rating.cached_ratings.each do |rating| %>
