getting iihs safety ratings to work over all model pages

--- a/app/views/car/year.html.erb
+++ b/app/views/car/year.html.erb
@@ -19,6 +19,6 @@
   
   <div class="large-3 pull-9 columns">
     <%= render 'summary' %>
-    <%= render 'safety_rating' %>
+    <%= render 'iihs_safety_rating/safety_rating' %>
   </div>
 </div>
