--- a/app/views/categories/year.html.erb
+++ b/app/views/categories/year.html.erb
@@ -18,6 +18,6 @@
   
   <div class="large-3 pull-9 columns">
     <%= content_tag(:span, "", :class => "car_icon", :id => "#{params[:category].parameterize('_')}") %>
-    <%= render 'car/safety_rating' %>
+    <%= render 'iihs_safety_rating/safety_rating' %>
   </div>
 </div>
