consolidating manufacuterer and model summaries

--- a/app/views/car/year.html.erb
+++ b/app/views/car/year.html.erb
@@ -18,7 +18,7 @@
   </div>
   
   <div class="large-3 pull-9 columns">
-    <%= render 'summary' %>
+    <%= render 'summaries/model_summary' %>
     <%= render 'iihs_safety_rating/safety_rating' %>
   </div>
 </div>
