--- a/app/views/car/model.html.erb
+++ b/app/views/car/model.html.erb
@@ -18,6 +18,6 @@
   </div>
   
   <div class="large-3 pull-9 columns">
-    <%= render 'summary' %>
+    <%= render 'summaries/model_summary' %>
   </div>
 </div>
