--- a/app/views/manufacturer/show.html.erb
+++ b/app/views/manufacturer/show.html.erb
@@ -16,7 +16,7 @@
 
   <div class="large-3 pull-9 columns">
     <div id="summary">
-      <%= render 'summary' %>
+      <%= render 'summaries/manufacturer_summary' %>
     </div>
   </div>
 </div>
