--- a/app/views/summaries/_model_summary.html.erb
+++ b/app/views/summaries/_model_summary.html.erb
@@ -1,5 +1,5 @@
 <div id="summary">
-  <%= render 'manufacturer/summary' %>
+  <%= render 'summaries/manufacturer_summary' %>
   
   <%= link_to "Model Summary", model_summary_path, data: { reveal_id: "modelModal", reveal_ajax: "true" }, class: "button secondary large radius" %>
   <div id="modelModal" class="reveal-modal" data-reveal aria-labelledby="modelModalTitle" aria-hidden="true" role="dialog"></div>
