--- a/app/views/car/year.html.erb
+++ b/app/views/car/year.html.erb
@@ -14,11 +14,13 @@
       <p>
         Available trims and images coming soon
       </p>
+      <p><%= @nhtsa_safety_rating.trim_uri %></p>
     </div>
   </div>
   
   <div class="large-3 pull-9 columns">
     <%= render 'summaries/model_summary' %>
     <%= render 'iihs_safety_rating/safety_rating' %>
+    <%= render 'nhtsa_safety_rating/safety_ratings' %>
   </div>
 </div>
