Keeping manufacturer accurate by not displaying Acrua for non-existent ones

--- a/app/assets/stylesheets/manufacturer.css.scss.erb
+++ b/app/assets/stylesheets/manufacturer.css.scss.erb
@@ -5,6 +5,7 @@
 .logo {
   background-image: url(<%= asset_path('logo_spritesheet.png') %>);
   background-repeat: no-repeat;
+  background-position: -1600px -400px;
   display: block;
   width: 200px;
   height: 200px;
