--- a/app/assets/stylesheets/car.css.scss.erb
+++ b/app/assets/stylesheets/car.css.scss.erb
@@ -4,6 +4,7 @@
 
 .manufacturer_logo {
   background-image: url(<%= asset_path('logo_spritesheet.png') %>);
+  background-position: -1600px -400px;
   background-repeat: no-repeat;
   display: block;
   width: 200px;
