--- a/app/views/iihs_safety_rating/_safety_rating.html.erb
+++ b/app/views/iihs_safety_rating/_safety_rating.html.erb
@@ -1,7 +1,7 @@
 <div id="safety-rating">
-  
+
   <h4>IIHS Safety Rating</h4>
-  
+
   <% if @safety_rating.cached_ratings.empty? %>
     <p class="text-justify">
       Currently no safety rating is available for this model from IIHS. However, since it was on the list of safe cars for teens, it recieved better that poor rating in all the IIHS tests and 4-5 star overall rating from the NHTSA.
@@ -10,12 +10,16 @@
     <div id="ratings">
       <% @safety_rating.cached_ratings.each do |rating| %>
         <div class="row">
-          <div class="large-10 columns"><%= rating[:rating_type] %></div>
-          <div class="large-2 columns"><%= render "iihs_safety_rating/#{rating[:rating_value].downcase}" %></div>
+          <div class="large-10 columns">
+            <%= render partial: 'iihs_safety_rating/safety_rating_name', locals: {rating_type: rating[:rating_type]} %>
+          </div>
+          <div class="large-2 columns">
+            <%= render partial: "iihs_safety_rating/#{rating[:rating_value].downcase}" %>
+          </div>
         </div>
       <% end %>
     </div>
-  
+
     <div id="full-report">
       <%= link_to "Full Safety Report", @safety_rating.report_uri, {target: "_blank", class: "button secondary radius"} %>
     </div>
